--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,8 @@
 /* YOUR CUSTOM STYLES */
+html, body, .view {
+	font-family: 'Raleway', 'sans-serif';
+}
+
+div #collapeEx a {
+	font-family: 'Arima Madurai', 'sans-serif';
+}
